[project]
name = "lmi-mcp-server"
version = "0.1.0"
description = "MCP server exposing TheLayoffRadar Labor Market Intelligence dataset"
authors = [{ name = "TheLayoffRadar", email = "admin@grandnasser.com" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
lmi-mcp = "server:mcp.run"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
